--- a/views/controllertoy/add.hbs
+++ b/views/controllertoy/add.hbs
@@ -1,4 +1,4 @@
-<form action="/controllertoy/add" method="post" class="container col-md-8 card bg-warning mt-3">
+<form action="/controllertoy/add" method="post" class="container col-md-8 card bg-light mt-3">
    <h1 class="text-danger text-uppercase text-center mt-3">Add new controller toy</h1>
    <div class="form-group mt-3">
       <label for="name" class="text-primary">Name</label>
