--- a/views/controllertoy/index.hbs
+++ b/views/controllertoy/index.hbs
@@ -29,7 +29,7 @@
       <td>{{ brand }}</td>
       <td>${{ price }}</td>
       <td>
-         <a href="/controller/detail/{{_id}}">
+         <a href="/controllertoy/detail/{{_id}}">
             <img src="{{ image }}" width="100" height="120">
          </a> 
       </td>
